--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -160,6 +160,10 @@
 3032104: Money monger Ⅳ
 3032105: Money monger Ⅴ
 3032106: Money monger Ⅵ
+1032201: Juvenile Gumption
+1032202: Succession Strike
+1032203: Storm Knuckle Corncopia
+1032204: Storm Knuckle Corncopia+
 # Rakta
 1020101: Focus Remover
 1020102: Development Arrest
@@ -618,6 +622,10 @@
 3030104: Captain of The Best Spear IV
 3030105: Captain of The Best Spear V
 3030106: Captain of The Best Spear VI
+1030201: Starquaker
+1030202: Resonate Loud
+1030203: Vox ex Machina
+1030204: Resonate Loud+
 # Kalaski
 1064101: Cutting Edge
 1064102: Burst Shot
@@ -1124,17 +1132,45 @@
 1125102: Présentation
 1125103: Grand Invention
 1125104: Grand Invention+
-2125101: Ground-breaking Inventionl
+2125101: Ground-breaking Invention
 2125102: Ground-breaking Invention+
 2125103: Ground-breaking Invention++
 3125101: Inventor's Inspiration I
-3125102: Inventor's Inspirationm II
+3125102: Inventor's Inspiration II
 3125103: Inventor's Inspiration III
 3125104: Inventor's Inspiration IV
 3125105: Inventor's Inspiration V
 3125106: Inventor's Inspiration VI
 8125101: Grand Invention
 8125102: Grand Invention+
+# Phein
+1128101: Sanaviml
+1128102: WW Hodye
+1128103: Suprese Euratio
+1128104: WW Hodye+
+2128101: Can't Fight on Empty Stomach
+2128102: Can't Fight on Empty Stomach+
+2128103: Can't Fight on Empty Stomach++
+3128101: Art of Protecting The Weak I
+3128102: Art of Protecting The Weak II
+3128103: Art of Protecting The Weak III
+3128104: Art of Protecting The Weak IV
+3128105: Art of Protecting The Weak V
+3128106: Art of Protecting The Weak VI
+# Anna
+1129101: Shiny Turn
+1129102: Flourish Veil
+1129103: Liberty Calls
+1129104: Flourish Veil+
+2129101: Gal's energy
+2129102: Gal's energy+
+2129103: Gal's energy++
+3129101: Freedom Expression I
+3129102: Freedom Expression II
+3129103: Freedom Expression III
+3129104: Freedom Expression IV
+3129105: Freedom Expression V
+3129106: Freedom Expression VI
 #Passive
 6030104: I am water
 6051102: Fire element
