--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1144,10 +1144,10 @@
 8125101: Grand Invention
 8125102: Grand Invention+
 # Phein
-1128101: Sanaviml
-1128102: WW Hodye
-1128103: Suprese Euratio
-1128104: WW Hodye+
+1128101: Sānābimur
+1128102: Vive Hodie
+1128103: Superesse Euratio
+1128104: Vive Hodie+
 2128101: Can't Fight on Empty Stomach
 2128102: Can't Fight on Empty Stomach+
 2128103: Can't Fight on Empty Stomach++
