--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -173,6 +173,12 @@
 113:
   name: "Skill Manual of Large Awakening Stone"
   description: "Extra chance of earning Large Awakening Stone"
+135:
+  name: "Token of Dreams"
+  description: "Necessary item to bloom heroes"
 153:
   name: "New Year's gift"
   description: "Rewards received in celebration of the New Year. Can be exchanged for special New Year's item at the exchange shop."
+166:
+  name: "Astro Credit"
+  description: "Precious gifts used in space. Items needed to strengthen certain heroes."
