--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -556,3 +556,8 @@
   description: "Recover 30% max hp at the end of the turn, cannot be dispelled."
   isGoodStatus: 2
   icon: ""
+"185":
+  name: "Haki"
+  description: "Increase Atk by 10% for every stack (max 100% increase), removed at the end of this turn, neither buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
