--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -164,6 +164,8 @@
 1032202: Succession Strike
 1032203: Storm Knuckle Corncopia
 1032204: Storm Knuckle Corncopia+
+8032201: Juvenile Gumption
+8032202: Juvenile Gumption
 # Rakta
 1020101: Focus Remover
 1020102: Development Arrest
