--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -17,7 +17,7 @@
 "一十":
   en: "Mentaiko/Itto"
 "steelwire/鉄線":
-  en: "steelwire"
+  en: "Steelwire"
 "きしぐま":
   en: "Xigma"
 "ずじ":
@@ -52,3 +52,7 @@
   en: "Seikei"
 "墓地":
   en: "Bochi/Fearfac666"
+"yow":
+  en: "Yow"
+"RybiOK":
+  en: "RybiOK"
