--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -556,8 +556,13 @@
   description: "Recover 30% max hp at the end of the turn, cannot be dispelled."
   isGoodStatus: 2
   icon: ""
+"183":
+  name: "First Act"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
 "185":
   name: "Haki"
-  description: "Increase Atk by 10% for every stack (max 100% increase), removed at the end of this turn, neither buff nor debuff"
+  description: "When removed increase Atk by 10% for every stack (max 100% increase) at the next turn, removed at the end of this turn, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
