--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ collections:
 exclude:
   - "*.py"
   - "assets/atlas.js"
+  - "assets/atlas.joke.js"
   - readme.md
   - node_modules
   - CONTRIBUTING.md
