--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -18,6 +18,18 @@
 [base skill] Decrease HP by -10% to all enemies for 1 turn(s) /50%<br>\
 [base skill] (extra_cond: Combo>=5) Activate this skill once again if Flamier is still alive, without gaining extra view /100%"
 
+# Kouki variant S2
+1018202: "[base skill] Deal 70% of damage to enemy<br>\
+[base skill] Apply one of the random debuff (
+  Attack Down, Defense Down, View Cost +1000, Burn, Speed Down
+  <!--{{ 11 | status_description }},
+  {{ 12 | status_description }},
+  {{ 88 | status_description }},
+  {{ 58 | status_description }},
+  {{ 19 | status_description }}-->
+) to enemy<br>\
+If the skill can be activated, activate this skill again (up to 4 times). Additional activation will not gain view."
+
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
 [base skill] Gives a single ally one of the 3 random inventions (ATK x110% permanently, Incoming damage x90% permanently, Recover 20% of max HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
