Revert "April fool! :clown:"
This reverts commit 532068c14dd41f8f6b744c8ae5fbead789d21c6b.

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ defaults:
     values:
       layout: chara
       unreleased: false
-      additional_scripts: ["/assets/atlas.joke.min.js"]
+      additional_scripts: ["/assets/atlas.min.js"]
   - scope:
       type: "events"
     values:
