--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -96,6 +96,11 @@
 3018104: Killer Content IV
 3018105: Killer Content V
 3018106: Killer Content VI
+1018201: Kid Stuff
+1018202: Highlight of Festa
+1018203: Prime-time Emperor
+1018204: Prime-time Emperor+
+8018201: Kid Stuff
 # Marfik
 1014101: Hunting Spirit
 1014102: Survivor Soul
@@ -536,6 +541,11 @@
 3006104: Cost of Frugality IV
 3006105: Cost of Frugality V
 3006106: Cost of Frugality VI
+1006201: Frontal Breakthrough
+1006202: Strenuous Efforts
+1006203: Towards The Star
+1006204: Towards The Star+
+8006201: Frontal Breakthrough
 # Andrew
 1025101: Humans Decoy
 1025102: Passive Jammer
@@ -1173,6 +1183,20 @@
 3129104: Freedom Expression IV
 3129105: Freedom Expression V
 3129106: Freedom Expression VI
+# Tsuneaki
+1140101: Set . Personification Shikigami
+1140102: Ritual . Four-corner border
+1140103: Platycodon Formation
+1140104: Platycodon Formation+
+2140101: Paper Talisman
+2140102: Paper Talisman+
+2140103: Paper Talisman++
+3140101: Reverse Curse Mirror I
+3140102: Reverse Curse Mirror II
+3140103: Reverse Curse Mirror III
+3140104: Reverse Curse Mirror IV
+3140105: Reverse Curse Mirror V
+3140106: Reverse Curse Mirror VI
 #Passive
 6030104: I am water
 6051102: Fire element
