--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -566,3 +566,8 @@
   description: "When removed increase Atk by 10% for every stack (max 100% increase) at the next turn, removed at the end of this turn, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"215":
+  name: "Inspire"
+  description: "Reduce skill 3 VP cost by 1000, removed after one turn, cannot be removed, neither buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
