--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -694,6 +694,12 @@
 3072104: Mercenary on the Verge of Death IV
 3072105: Mercenary on the Verge of Death V
 3072106: Mercenary on the Verge of Death VI
+1072201: Latent Protect
+1072202: Mounting Flame
+1072203: Operation Regain
+1072204: Operation Regain+
+8072201: Latent Protect
+8072202: Mounting Flame
 # Monomasa
 1031101: Kynigó Sylléktis
 1031102: Proteïkós Sóma
@@ -1197,6 +1203,46 @@
 3140104: Reverse Curse Mirror IV
 3140105: Reverse Curse Mirror V
 3140106: Reverse Curse Mirror VI
+# Tabit
+1151101: Rapid Overhaul
+1151102: Absorb & Convert
+1151103: Nanoblast Metamorphosis
+1151104: Nanoblast Metamorphosis+
+2151101: Order Restoration
+2151102: Order Restoration+
+2151103: Order Restoration++
+3151101: Special Operation Order I
+3151102: Special Operation Order II
+3151103: Special Operation Order III
+3151104: Special Operation Order IV
+3151105: Special Operation Order V
+3151106: Special Operation Order VI
+8151101: Rapid Overhaul
+# Esperdica
+1152101: Nero Tagliente
+1152102: Molare Espresso
+1152103: Aromi Incantevole
+1152104: Aromi Incantevole+
+2152101: Roast Master
+2152102: Roast Master+
+2152103: Roast Master++
+3152101: Barista's Obsession I
+3152102: Barista's Obsession II
+3152103: Barista's Obsession III
+3152104: Barista's Obsession IV
+3152105: Barista's Obsession V
+3152106: Barista's Obsession VI
+8152101: Aromi Incantevole
+# Raizi
+2153101: Bet & Raise
+2153102: Bet & Raise+
+2153103: Bet & Raise++
+3153101: Straight Draw I
+3153102: Straight Draw II
+3153103: Straight Draw III
+3153104: Straight Draw IV
+3153105: Straight Draw V
+3153106: Straight Draw VI
 #Passive
 6030104: I am water
 6051102: Fire element
