--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1233,6 +1233,7 @@
 3152105: Barista's Obsession V
 3152106: Barista's Obsession VI
 8152101: Aromi Incantevole
+8152102: Aromi Incantevole
 # Raizi
 2153101: Bet & Raise
 2153102: Bet & Raise+
