--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -30,6 +30,9 @@
 ) to enemy<br>\
 If the skill can be activated, activate this skill again (up to 4 times). Additional activation will not gain view."
 
+# Polaris Mask S2 bloom passive
+8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
+
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
 [base skill] Gives a single ally one of the 3 random inventions (ATK x110% permanently, Incoming damage x90% permanently, Recover 20% of max HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
