--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -571,3 +571,8 @@
   description: "Reduce skill 3 VP cost by 1000, removed after one turn, cannot be removed, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"221":
+  name: "Steel Fist"
+  description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
+  isGoodStatus: 2
+  icon: ""
