--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -18,6 +18,19 @@
 [base skill] Decrease HP by -10% to all enemies for 1 turn(s) /50%<br>\
 [base skill] (extra_cond: Combo>=5) Activate this skill once again if Flamier is still alive, without gaining extra view /100%"
 
+# Gaius S1 bloom passive
+8115101: "[base skill] Atk+20% when not having debuff /100%"
+
+8115102: "[base skill] Every 1 buff on self also grants 25% debuff resistance (up to 100%) /100%"
+
+# Kouki S1 bloom active
+1018105: "[base skill] Deal 60% of damage to target enemy /100% <br>\
+[base skill] ATK Down by 0.5x to target enemy for 1 action(s) /40% <br>\
+[base skill] Add 1500 views /100%"
+
+# Kouki S1 bloom passive
+8018101: "[When invoker is alive] Reduce damage received by allies based on current VP (0-20% damage reduce at 0-50000 VP) /100%"
+
 # Kouki variant S2
 1018202: "[base skill] Deal 70% of damage to enemy<br>\
 [base skill] Apply one of the random debuff (
@@ -32,6 +45,14 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 
 # Polaris Mask S2 bloom passive
 8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
+
+# Rakta S3 bloom active
+8004201: "[base skill] Skill View cost Down by 0.5x for target ally for 2 turn(s) /100% <br>\
+[base skill] Remove 2 debuff(s) from target ally /100%  <br>\
+[base skill] If target has debuff, heal target by 50% own atk /100%"
+
+# Ryekie variant S2 bloom passive
+8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
 
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
