--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -87,6 +87,7 @@
 1018102: Special Service
 1018103: Prime-time Emperor
 1018104: Special Service+
+1018105: Appeal Chance+
 2018101: Superstar's Entrance
 2018102: Superstar's Entrance+
 2018103: Superstar's Entrance++
@@ -100,6 +101,7 @@
 1018202: Highlight of Festa
 1018203: Prime-time Emperor
 1018204: Prime-time Emperor+
+8018101: Appeal Chance+
 8018201: Kid Stuff
 # Marfik
 1014101: Hunting Spirit
@@ -142,6 +144,7 @@
 1015102: Mic Performance
 1015103: Polaris Buster!! 
 1015104: Polaris Buster!!+
+1015105: Glittering Stars Back-Breaker+
 2015101: Two Platon
 2015102: Two Platon+
 2015103: Two Platon++
@@ -151,6 +154,8 @@
 3015104: Warrior Fascinated by Adversity Ⅳ
 3015105: Warrior Fascinated by Adversity Ⅴ
 3015106: Warrior Fascinated by Adversity Ⅵ
+8015101: Glittering Stars Back-Breaker+
+8015102: Mic Performance
 # Procy
 1032101: Money is Time
 1032102: Gold Rush Hour
@@ -176,6 +181,7 @@
 1020102: Development Arrest
 1020103: Greatest Operation
 1020104: Greatest Operation+
+1020107: Greatest Operation++
 2020101: Focused Excision
 2020102: Focused Excision+
 2020103: Focused Excision++
@@ -194,6 +200,7 @@
 1004202: Discharge Banquet
 1004203: Gigabolt Breaker
 1004204: Gigabolt Breaker+
+1004206: Discharge Banquet+
 2004101: Thunderbolt of Justice
 2004102: Thunderbolt of Justice+
 2004103: Thunderbolt of Justice++
@@ -203,6 +210,7 @@
 3004104: Call My Name IV
 3004105: Call My Name V
 3004106: Call My Name VI
+8004201: Discharge Banquet+
 # Victom
 1009101: Hyper Rescue
 1009102: Desperado Mind
@@ -532,6 +540,7 @@
 1006102: Detective Inquiry
 1006103: Towards The Star
 1006104: Detective Inquiry+
+1006107: Towards The Star+
 2006101: On-site Learned Hojojutsu
 2006102: On-site Learned Hojojutsu+
 2006103: On-site Learned Hojojutsu++
@@ -564,6 +573,8 @@
 1025202: Everlasting Link
 1025203: Geminis Decide
 1025204: Everlasting Link+
+1025205: Torrent Knuckle+
+8025201: Torrent Knuckle+
 # Maculata
 1059101: Fil Dernier  
 1059102: Bon Taille
@@ -1023,6 +1034,7 @@
 1115102: Fluctus Caeruleum 
 1115103: Lacus Serpens Ira
 1115104: Fluctus Caeruleum+
+1115105: Sagitta Aqua+
 2115101: Pattern Release
 2115102: Pattern Release+
 2115103: Pattern Release++
@@ -1032,6 +1044,8 @@
 3115104: Diver's Teaching IV
 3115105: Diver's Teaching V
 3115106: Diver's Teaching VI
+8115101: Sagitta Aqua+
+8115102: Sagitta Aqua+
 # Cerastium
 1123101: Arie de Febvre
 1123102: Delivasion
