--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -67,3 +67,66 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 1112101: "[base skill] SPD Down by -10 to target enemy for 1 action(s) /100%.<br>\
 [base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
 
+# Unexplored Skills
+9000001: "View Gain or Special role allies' skill View Gain +100%"
+9000002: "At start of action, if View is 10,000 or more, gain 1 DEF UP"
+9000003: "At start of action, if View is 10,000 or more, gain 1 ATK UP"
+9000004: "Increase ATK based on current View Power (Gradually increase till max +50% when View at 20,000)"
+9000005: "When Speed or Special role allies still alive, <br>\
+increase all allies dealt damage to enemies by target's SPD difference x1% per Speed role heroes"
+9000006: "After heroes with SPD UP・Super SPD UP has acted, grant another action <br>\
+(Within same turn, every time regaining another action, the rate of gaining another action by this skill is halved)"
+9000007: "When Speed or Special role allies deal damage to enemies, <br>\
+deal target's 2% of MAX HP as extra damage"
+9000008: "When have SPD UP・Super SPD UP buff, ATK+30%"
+9000009: "Buffs granted by Support or Special role allies +1 Turn"
+9000012: "Debuff granted by Debuff or Special role allies +1 Turn"
+9000013: "When Debuff or Special role allies deal damage using skill, <br>\
+extends one of target's debuff by 1 Turn randomly"
+9000014: "When Debuff or Special role allies deal damage using skill, <br>\
+if target has any debuffs on them, trigger own Auto Action (once per turn)"
+9000015: "Heal or Special role allies' heal amount +50%"
+9000016: "When Heal or Special role allies heal HP, remove 1 debuff on target"
+9000017: "After Heal or Special role allies has acted, <br>\
+heal ally with the most lowest HP by 60% of own ATK"
+9000018: "Defense or Special role allies' damage taken -20%"
+9000019: "When Defense or Special role allies received damage, gain 1 ATK UP"
+9000020: "When Defense or Special role allies received damage, Counter with skill 1"
+9000021: "At start of battle, Attack or Special role allies gain 1 ATK UP"
+9000022: "When Attack or Special role allies incapacitated enemies, gain another action"
+9000023: "Every time Heroes deal damage, ATK+2%"
+9000025: "All skill View Cost -1000"
+9000026: "Every incapacitated allies, ATK+30%"
+9000027: "When using skill that increases Combo, additionally +1 Combo"
+9000028: "After action, if the Combo count is 8 or more, gain another action (once per turn for each Heroes)"
+9000029: "At start of action, if Combo count is 5 or more, gain 1 ATK UP"
+9000030: "When using non-attack skill, gain 1 SPD UP"
+9000031: "When Attack or Special role allies using non-damage skill, gain another action (once per turn)"
+9000032: "Allies with debuff ATK+20%"
+9000033: "Initial Rank 2 or below Heroes ATK+100%"
+9000034: "ATK +20% For heroes with affiliation office : Parallel Flight(PF)"
+9000035: "ATK +20% For heroes with affiliation office : United Earth Hero Dispatch(UE), <br>\
+Independent Heroes(ID), ????(??), Japan Defense Bureau(JD)"
+9000036: "ATK +20% For heroes with affiliation office : Ardisia Kingdom Cavalry(AK), Guild Eagle Eyes(GE),<br>\
+Unaffiliated(NO), S&S Heros(SH)"
+9000037: "ATK +20% For heroes with affiliation office : Heroic Educators(HE), Galaxy Athletes(GA),<br>\
+M.A.H.A.(MA), Creative Brains(CB)"
+9000038: "ATK +20% For heroes with affiliation office : Laborer's Site(LS), Global Drivers Union(GD), <br>\
+Gourmet Fighters(GF), Neotalents Production(NP), Broadcasters(BC)"
+9000047: "Skill activation rate +20%"
+9000050: "When dealing damage to enemies with elemental advantages, effectiveness +0.5x"
+9000054: "When Defense or Special role allies use skills that damage to themselves for once,<br>\
+the damage is capped at 90% own MAX HP"
+9000055: "Initial Rank 3 or below Heroes ATK+50%"
+9000056: "Initial Rank 3 or below Heroes' non-damage skill View Cost is halved"
+9000059: "When View Gain or Special role allies gain View by using skill, deal 50% of gained View by the skill to all enemies"
+9000060: "Increase ATK further as HP drops (MAX +100%)"
+9000061: "When receiving heal from skill, gain 1 ATK+50% (Buff gained from this skill does not counted as duplicate buff)"
+9000062: "Skill activation rate +50%"
+9000063: "At start of battle, grant 1 time use Super Awakening (View Cost become 0)"
+9000064: "Max HP +50%"
+9000065: "At start of turn, grant Invention that will activates after 3 actions, granting another action for self. <br>\
+If there's already Invention granted, this skill won't activated"
+9000066: "Increase damage dealt to enemies based on number of debuffs on them (1 debuff +25%, max +100%)"
+
+
