--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -74,8 +74,9 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 9000004: "Increase ATK based on current View Power (Gradually increase till max +50% when View at 20,000)"
 9000005: "When Speed or Special role allies still alive, <br>\
 increase all allies dealt damage to enemies by target's SPD difference x1% per Speed role heroes"
-9000006: "After heroes with SPD UP・Super SPD UP has acted, grant another action <br>\
-(Within same turn, every time regaining another action, the rate of gaining another action by this skill is halved)"
+9000006: "After heroes with SPD UP・Super SPD UP has acted, <br>\
+grant another action (Within same turn, every time regaining another action,<br>\
+the rate of gaining another action by this skill is halved)"
 9000007: "When Speed or Special role allies deal damage to enemies, <br>\
 deal target's 2% of MAX HP as extra damage"
 9000008: "When have SPD UP・Super SPD UP buff, ATK+30%"
@@ -105,13 +106,17 @@ heal ally with the most lowest HP by 60% of own ATK"
 9000032: "Allies with debuff ATK+20%"
 9000033: "Initial Rank 2 or below Heroes ATK+100%"
 9000034: "ATK +20% For heroes with affiliation office : Parallel Flight(PF)"
-9000035: "ATK +20% For heroes with affiliation office : United Earth Hero Dispatch(UE), <br>\
-Independent Heroes(ID), ????(??), Japan Defense Bureau(JD)"
-9000036: "ATK +20% For heroes with affiliation office : Ardisia Kingdom Cavalry(AK), Guild Eagle Eyes(GE),<br>\
+9000035: "ATK +20% For heroes with affiliation office : <br>\
+United Earth Hero Dispatch(UE), Independent Heroes(ID), <br>\
+????(??), Japan Defense Bureau(JD)"
+9000036: "ATK +20% For heroes with affiliation office : <br>\
+Ardisia Kingdom Cavalry(AK), Guild Eagle Eyes(GE),<br>\
 Unaffiliated(NO), S&S Heros(SH)"
-9000037: "ATK +20% For heroes with affiliation office : Heroic Educators(HE), Galaxy Athletes(GA),<br>\
+9000037: "ATK +20% For heroes with affiliation office : <br>\
+Heroic Educators(HE), Galaxy Athletes(GA),<br>\
 M.A.H.A.(MA), Creative Brains(CB)"
-9000038: "ATK +20% For heroes with affiliation office : Laborer's Site(LS), Global Drivers Union(GD), <br>\
+9000038: "ATK +20% For heroes with affiliation office : <br>\
+Laborer's Site(LS), Global Drivers Union(GD), <br>\
 Gourmet Fighters(GF), Neotalents Production(NP), Broadcasters(BC)"
 9000047: "Skill activation rate +20%"
 9000050: "When dealing damage to enemies with elemental advantages, effectiveness +0.5x"
