Some skill override

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -1,6 +1,10 @@
 
 # Sort by character name > original/variant/sidekick > skill
 
+# Alphecca variant S1
+1062201: "[base skill] Deal 80% of damage to target enemy /100%<br> \
+[base skill] (extra_cond: Combo is multiple of 5) Deal 50% of damage to all enemes /100%"
+
 # Andrew variant S3
 1025203: "[base skill] Deal 50% of damage to target enemy, and deal another 50% of damage to target enemy for every Defense Up status that Andrew posesses, up to 3 extra hits /100%<br>\
 [base skill] Deal 100% of damage to target enemy /100%<br>\
@@ -50,6 +54,11 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 1020107: "[base skill] Skill View cost Down by 0.5x for target ally for 2 turn(s) /100% <br>\
 [base skill] Remove 2 debuff(s) from target ally /100%  <br>\
 [base skill] If target has debuff, heal target by 50% own atk /100%"
+
+# Rakta variant S3
+1020203: "[base skill] Grants ATK accumulation (1.1x) to a single ally for 3 turns. If the target has ATK Accumulation,
+buffs up ATK Accumulation (up to 2x) /100% <br>\
+[base skill] View consumption -1500 to all alies except self for one action /100%"
 
 # Ryekie variant S2 bloom passive
 8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
