--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1258,6 +1258,21 @@
 3153104: Straight Draw IV
 3153105: Straight Draw V
 3153106: Straight Draw VI
+# Obsidius
+1160101: Excavate
+1160102: Drilling Break
+1160103: Pierce All Unknowns
+1160104: Pierce All Unknowns+
+2160101: Excavation Survey
+2160102: Excavation Survey+
+2160103: Excavation Survey++
+3160101: Fieldwork Approach I
+3160102: Fieldwork Approach II
+3160103: Fieldwork Approach III
+3160104: Fieldwork Approach IV
+3160105: Fieldwork Approach V
+3160106: Fieldwork Approach VI
+8160101: Excavate
 #Passive
 6030104: I am water
 6051102: Fire element
