--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -47,6 +47,27 @@
 ) to enemy<br>\
 If the skill can be activated, activate this skill again (up to 4 times). Additional activation will not gain view."
 
+# Obsidius S1
+1160101: "[base skill] Deal 50% of damage to target enemy /100%<br>\
+[base skill] Apply 2 stack of Stubborn to self /100% (Stubborn doesn't count as buff or debuff)"
+
+# Obsidius S2
+1160102: "[base skill] Deal 50% of damage 2 times to random enemy/100%<br>\
+[Each hit] Incoming damage to random enemy increased by 1.5x for 1 next attack(s) /50%<br>\
+[When has more than 3 Stubborn] Deal 1 additional hit and remove 3 stack of Stubborn /100%"
+
+# Obsidius S3
+1160103: "[base skill] Remove 1 buff(s) from all enemies /100%<br>\
+[base skill] Deal 90% of damage to all enemies, the less enemies hit the more the damage increase up to 180% against one enemy /100%<br>\
+[When has more than 5 Stubborn] Performs one more action this turn and remove 5 stack of Stubborn /100%"
+
+1160104: "[base skill] Remove 1 buff(s) from all enemies /100%<br>\
+[base skill] Deal 90% of damage to all enemies, the less enemies hit the more the damage increase up to 180% against one enemy /100%<br>\
+[When has more than 5 Stubborn] Performs one more action this turn and remove 5 stack of Stubborn /100%"
+
+# Obsidius Passive
+8160101: "[When buffed] Add 1 stack of Sturdy to self /100%"
+
 # Polaris Mask S2 bloom passive
 8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
 
@@ -63,6 +84,15 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 # Ryekie variant S2 bloom passive
 8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
 
+# Santetsu S1
+1112101: "[base skill] SPD Down by -10 to target enemy for 1 action(s) /100%.<br>\
+[base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
+
+# Theoreol S3
+1161103: "[base skill] Incoming damage to all allies reduced by 0.5x for 1 next attack(s) /100%.<br>\
+[base skill] Grants all allies Conversion (Heal for 50% of the invoker's atk every time they receive damage, 
+doesn't take effect if the damage defeat the receiver) for 2 turns /100%"
+
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
 [base skill] Gives a single ally one of the 3 random inventions (ATK x110% permanently, Incoming damage x90% permanently, Recover 20% of max HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
@@ -72,9 +102,7 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 [base skill] Decrease HP by -5% to target enemy for 2 turn(s) /60%<br>\
 [base skill] Activate this skill once again if the enemy is still alive /100%"
 
-# Santetsu S1
-1112101: "[base skill] SPD Down by -10 to target enemy for 1 action(s) /100%.<br>\
-[base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
+
 
 # Unexplored Skills
 9000001: "View Gain or Special role allies' skill View Gain +100%"
