--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -66,7 +66,7 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 [When has more than 5 Stubborn] Performs one more action this turn and remove 5 stack of Stubborn /100%"
 
 # Obsidius Passive
-8160101: "[When buffed] Add 1 stack of Sturdy to self /100%"
+8160101: "[When buffed] Add 1 stack of Stubborn to self /100%"
 
 # Polaris Mask S2 bloom passive
 8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
