--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -5,6 +5,10 @@
 1062201: "[base skill] Deal 80% of damage to target enemy /100%<br> \
 [base skill] (extra_cond: Combo is multiple of 5) Deal 50% of damage to all enemes /100%"
 
+# Alphecca variant Passive
+8062201: ""
+8062202: ""
+
 # Andrew variant S3
 1025203: "[base skill] Deal 50% of damage to target enemy, and deal another 50% of damage to target enemy for every Defense Up status that Andrew posesses, up to 3 extra hits /100%<br>\
 [base skill] Deal 100% of damage to target enemy /100%<br>\
