--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -51,6 +51,9 @@
 ) to enemy<br>\
 If the skill can be activated, activate this skill again (up to 4 times). Additional activation will not gain view."
 
+# Kouki variant Passive 2
+8018202: ""
+
 # Obsidius S1
 1160101: "[base skill] Deal 50% of damage to target enemy /100%<br>\
 [base skill] Apply 2 stack of Stubborn to self /100% (Stubborn doesn't count as buff or debuff)"
