--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -191,6 +191,10 @@
 3020104: Threatening Concentration IV
 3020105: Threatening Concentration V
 3020106: Threatening Concentration VI
+1020201: Total Approach
+1020202: Passionate Therapy
+1020203: Greatest Encouragement
+1020204: Passionate Therapy+
 # Ryekie
 1004101: Kilobolt Slug
 1004102: Megabolt Crash
@@ -631,6 +635,10 @@
 3062104: King Knight's Ambition IV
 3062105: King Knight's Ambition V
 3062106: King Knight's Ambition VI
+1062201: Här av Vann
+1062202: Kungens Aldern
+1062203: Helig Vann Spyd
+1062204: Kungens Aldern+
 # Suhail
 1030101: Murchison Meteo
 1030102: Giant Impact
@@ -1273,6 +1281,20 @@
 3160105: Fieldwork Approach V
 3160106: Fieldwork Approach VI
 8160101: Excavate
+# Theoreol
+1161101: Extractum
+1161102: Aqua Vitae
+1161103: Lapis Philosophorum
+1161104: Aqua Vitae+
+2161101: Completely Safe Medicine
+2161102: Completely Safe Medicine+
+2161103: Completely Safe Medicine++
+3161101: Alchemist's Observation I
+3161102: Alchemist's Observation II
+3161103: Alchemist's Observation III
+3161104: Alchemist's Observation IV
+3161105: Alchemist's Observation V
+3161106: Alchemist's Observation VI
 #Passive
 6030104: I am water
 6051102: Fire element
