--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -100,6 +100,9 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 [base skill] Grants all allies Conversion (Heal for 50% of the invoker's atk every time they receive damage, 
 doesn't take effect if the damage defeat the receiver) for 2 turns /100%"
 
+# Theoreol Passive
+8161101: "[In auto action] Prioritize the third skill when there is an ally with less than 50% HP"
+
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
 [base skill] Gives a single ally one of the 3 random inventions (ATK x110% permanently, Incoming damage x90% permanently, Recover 20% of max HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
@@ -108,8 +111,6 @@ doesn't take effect if the damage defeat the receiver) for 2 turns /100%"
 1065101: "[base skill] Deal 45% of damage to target enemy /100%<br>\
 [base skill] Decrease HP by -5% to target enemy for 2 turn(s) /60%<br>\
 [base skill] Activate this skill once again if the enemy is still alive /100%"
-
-
 
 # Unexplored Skills
 9000001: "View Gain or Special role allies' skill View Gain +100%"
