Override some skills

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -18,9 +18,6 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
-# Goro variant passive
-8023201: "[When caster is alive], ATK of all allies increases for another 10% for each buff they possess (up to extra 50% ATK with 5 buffs). This effect does not stack with similar effects."
-
 # Flamier variant S2
 1011202: "[base skill] Deal 50% of damage to all enemies /100%<br>\
 [base skill] Decrease HP by -10% to all enemies for 1 turn(s) /50%<br>\
@@ -30,6 +27,26 @@
 8115101: "[base skill] Atk+20% when not having debuff /100%"
 
 8115102: "[base skill] Every 1 buff on self also grants 25% debuff resistance (up to 100%) /100%"
+
+# Garbo S2, S3, S3+, passive
+1169102: "[base skill] Heal self for 80% of own ATK value /100%<br>\
+[base skill] Remove 2 debuff(s) from self /100%<br>\
+[base skill] (extra_cond: possessing x >= 2 debuffs) Perform 1 more action(s) per turn only/100%"
+1169103: "[base skill] Deal 110% of damage to all enemies /100%<br>\
+[base skill] Decrease HP by -20% to self for 3 turn(s) (does not stack)/100%"
+1169104: "[base skill] Deal 110% of damage to all enemies /100%<br>\
+[base skill] Decrease HP by -20% to self for 3 turn(s) (does not stack)/100%"
+8169102: "[Constant activation] When Garbo's HP recovers back from <50%, ATK+10% to self (up to 50%)"
+8169103: ""
+8169104: ""
+
+# Goro variant passive
+8023201: "[When caster is alive], ATK of all allies increases for another 10% for each buff they possess (up to extra 50% ATK with 5 buffs). This effect does not stack with similar effects."
+
+# Grigory S2
+1170102: "[base skill] Remove 1 debuff(s) from all allies /100%<br>\
+[base skill] Increase HP by 10% to all allies for 1 turn(s) /100%<br>\
+[base skill] Perform 1 more action(s) (once per turn only) /100%"
 
 # Kouki S1 bloom active
 1018105: "[base skill] Deal 60% of damage to target enemy /100% <br>\
