Override exio skill
S3, S3+ not done yet...

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -18,6 +18,12 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
+# Exio S2, passive
+1035102: "[base skill] For each \"Multi Observation\" status held, change skill view cost by -1000 for all allies except self for 1 turn(s) /100%<br>\
+[base skill] Remove all \"Multi Observation\" statuses /100%"
+8035101: "[when invoker's attack causes damage to enemy] Apply \"Multi Observation\" to self /100%"
+8035102: ""
+
 # Flamier variant S2
 1011202: "[base skill] Deal 50% of damage to all enemies /100%<br>\
 [base skill] Decrease HP by -10% to all enemies for 1 turn(s) /50%<br>\
