--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -576,3 +576,8 @@
   description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
   isGoodStatus: 2
   icon: ""
+"1035101":
+  name: "Multi Observation"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: "status_buff_special"
