--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -24,6 +24,17 @@
 8035101: "[when invoker's attack causes damage to enemy] Apply \"Multi Observation\" to self /100%"
 8035102: ""
 
+# Exio S3
+1035103: "[base skill] Deal 160% + 10% X \"Multi Observation\" of damage to target enemy, this damage is increased up to 100% depending on the amount 
+of view after the skill is cast (maxed at 13000 view) /100%
+[base skill] Remove all \"Multi Observation\" statuses /100%
+[base skill] Use up to 20000 View to apply \"Multi Observation\" to self (each \"Multi Observation\" use 5000 view) /100%"
+
+1035104: "[base skill] Deal 160% + 10% X \"Multi Observation\" of damage to target enemy, this damage is increased up to 100% depending on the amount 
+of view after the skill is cast (maxed at 11000 view) /100%
+[base skill] Remove all \"Multi Observation\" statuses /100%
+[base skill] Use up to 20000 View to apply \"Multi Observation\" to self (each \"Multi Observation\" use 5000 view) /100%"
+
 # Flamier variant S2
 1011202: "[base skill] Deal 50% of damage to all enemies /100%<br>\
 [base skill] Decrease HP by -10% to all enemies for 1 turn(s) /50%<br>\
