--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -26,13 +26,13 @@
 
 # Exio S3
 1035103: "[base skill] Deal 160% + 10% X \"Multi Observation\" of damage to target enemy, this damage is increased up to 100% depending on the amount 
-of view after the skill is cast (maxed at 13000 view) /100%
-[base skill] Remove all \"Multi Observation\" statuses /100%
+of view after the skill is cast (maxed at 13000 view) /100%<br>\
+[base skill] Remove all \"Multi Observation\" statuses /100%<br>\
 [base skill] Use up to 20000 View to apply \"Multi Observation\" to self (each \"Multi Observation\" use 5000 view) /100%"
 
 1035104: "[base skill] Deal 160% + 10% X \"Multi Observation\" of damage to target enemy, this damage is increased up to 100% depending on the amount 
-of view after the skill is cast (maxed at 11000 view) /100%
-[base skill] Remove all \"Multi Observation\" statuses /100%
+of view after the skill is cast (maxed at 11000 view) /100%<br>\
+[base skill] Remove all \"Multi Observation\" statuses /100%<br>\
 [base skill] Use up to 20000 View to apply \"Multi Observation\" to self (each \"Multi Observation\" use 5000 view) /100%"
 
 # Flamier variant S2
