Fix galvo and danzo skill

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -45,14 +45,14 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 
 8115102: "[base skill] Every 1 buff on self also grants 25% debuff resistance (up to 100%) /100%"
 
-# Garbo S2, S3, S3+, passive
+# Galvo S2, S3, S3+, passive
 1169102: "[base skill] Heal self for 80% of own ATK value /100%<br>\
 [base skill] Remove 2 debuff(s) from self /100%<br>\
 [base skill] (extra_cond: possessing x >= 2 debuffs) Perform 1 more action(s) per turn only/100%"
 1169103: "[base skill] Deal 110% of damage to all enemies /100%<br>\
-[base skill] Decrease HP by -20% to self for 3 turn(s) (does not stack)/100%"
+[base skill] Decrease HP by -20% to self for 3 turn(s) /100%"
 1169104: "[base skill] Deal 110% of damage to all enemies /100%<br>\
-[base skill] Decrease HP by -20% to self for 3 turn(s) (does not stack)/100%"
+[base skill] Decrease HP by -20% to self for 3 turn(s) /100%"
 8169102: "[Constant activation] When Garbo's HP recovers back from <50%, ATK+10% to self (up to 50%)"
 8169103: ""
 8169104: ""
