--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -846,6 +846,10 @@
 3070105: Shadow Mercenary's Provision V
 3070106: Shadow Mercenary's Provision VI
 # Exio
+1035101: Run Fiction
+1035102: In The Mirror
+1035103: Id Replica
+1035104: Id Replica+
 2035101: The Point of Awakening
 2035102: The Point of Awakening+
 2035103: The Point of Awakening++
@@ -1295,6 +1299,50 @@
 3161104: Alchemist's Observation IV
 3161105: Alchemist's Observation V
 3161106: Alchemist's Observation VI
+# Danzo
+1168101: Trick Play
+1168102: Battle Breaks Rush
+1168103: Floor Killing Player
+1168104: Battle Breaks Rush+
+2168101: Dance Floor Assasin
+2168102: Dance Floor Assasin+
+2168103: Dance Floor Assasin++
+3168101: Psychological Ninjutsu I
+3168102: Psychological Ninjutsu II
+3168103: Psychological Ninjutsu III
+3168104: Psychological Ninjutsu IV
+3168105: Psychological Ninjutsu V
+3168106: Psychological Ninjutsu VI
+8168102: Battle Breaks Rush+
+# Galvo
+1169101: Glimmer of The End
+1169102: Wildfire
+1169103: Finishing Touch
+1169104: Finishing Touch+
+2169101: Glimmering Claws
+2169102: Glimmering Claws+
+2169103: Glimmering Claws++
+3169101: In Full Bloom I
+3169102: In Full Bloom II
+3169103: In Full Bloom III
+3169104: In Full Bloom IV
+3169105: In Full Bloom V
+3169106: In Full Bloom VI
+8169102: Glimmer of The End
+# Grigory
+1170101: Movement Line
+1170102: Homing Dori
+1170103: Pair of Ravens
+1170104: Pair of Ravens+
+2170101: Jump Target
+2170102: Jump Target+
+2170103: Jump Target++
+3170101: Fixpoint I
+3170102: Fixpoint II
+3170103: Fixpoint III
+3170104: Fixpoint IV
+3170105: Fixpoint V
+3170106: Fixpoint VI
 #Passive
 6030104: I am water
 6051102: Fire element
