--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -53,7 +53,7 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 [base skill] Decrease HP by -20% to self for 3 turn(s) /100%"
 1169104: "[base skill] Deal 110% of damage to all enemies /100%<br>\
 [base skill] Decrease HP by -20% to self for 3 turn(s) /100%"
-8169102: "[Constant activation] When Garbo's HP recovers back from <50%, ATK+10% to self (up to 50%)"
+8169102: "[Constant activation] When Galvo's HP recovers back from <50%, ATK+10% to self (up to 50%)"
 8169103: ""
 8169104: ""
 
