--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -122,6 +122,10 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 buffs up ATK Accumulation (up to 2x) /100% <br>\
 [base skill] View consumption -1500 to all alies except self for one action /100%"
 
+# Roiker S2 
+1113102: "[base skill] (extra_cond: target enemy possessing 0 buffs) Deal 120% of damage to target enemy /100% <br>\
+[base skill] (extra_cond: target enemy possessing x > 0 buffs(s)) Deal 180% of damage to target enemy /100%"
+
 # Ryekie variant S2 bloom passive
 8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
 
