--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -5,6 +5,9 @@
 2:
   name: "Ether Stone"
   description: "A beautiful crystal stone that fulfills various roles (free)"
+3:
+  name: "Permanent Ticket"
+  description: "A ticket that allows you to perform a permanent ether search once"
 10:
   name: "Ether Ticket"
   description: "A ticket that allows you to perform an ether search once"
@@ -176,10 +179,21 @@
 135:
   name: "Token of Dreams"
   description: "Necessary item to bloom heroes"
+137:
+  name: "High-purity Heronium"
+  description: "Unique currency with a time limit used between hero offices. Can be exchanged for items at the exchange."
 153:
   name: "New Year's gift"
   description: "Rewards received in celebration of the New Year. Can be exchanged for special New Year's item at the exchange shop."
 166:
   name: "Astro Credit"
   description: "Precious gifts used in space. Items needed to strengthen certain heroes."
-  
+182:
+  name: "Stamina Drink Mini"
+  description: "Item that restores 20 stamina"
+183:
+  name: "Specific ★5 Hero Nomination Ticket"
+  description: "Reward for completing the New Employee Mission. Ticket to select the nominated hero at the New Employee Mission★5 Exchange."
+184:
+  name: "3rd Anniversary Ticket"
+  description: "Ticket distributed for the 3rd anniversary, which can be used in a special exchange."
