Handle new skills

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -57,6 +57,18 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8169103: ""
 8169104: ""
 
+# Giansar S3, S3+
+1124103: "[base skill] Gain 2 combo(s) /100%<br>\
+[base skill] (extra_cond: Enemy count = 1) SPD Down by -30 to all enemies for 1 action(s) /100%<br>\
+[base skill] (extra_cond: Enemy count = 1) Incoming damage to all enemies increased by 1.8x for 2 next attack(s) /100%<br><br>\
+[base skill] (extra_cond: Enemy count >= 2) SPD Down by -10 to all enemies for 1 action(s) /100%<br>\
+[base skill] (extra_cond: Enemy count >= 2) Incoming damage to all enemies increased by 1.5x for 1 next attack(s) /100%"
+1124104: "[base skill] Gain 3 combo(s) /100%<br>\
+[base skill] (extra_cond: Enemy count = 1) SPD Down by -30 to all enemies for 1 action(s) /100%<br>\
+[base skill] (extra_cond: Enemy count = 1) Incoming damage to all enemies increased by 1.8x for 2 next attack(s) /100%<br><br>\
+[base skill] (extra_cond: Enemy count >= 2) SPD Down by -10 to all enemies for 1 action(s) /100%<br>\
+[base skill] (extra_cond: Enemy count >= 2) Incoming damage to all enemies increased by 1.5x for 1 next attack(s) /100%"
+
 # Goro variant passive
 8023201: "[When caster is alive], ATK of all allies increases for another 10% for each buff they possess (up to extra 50% ATK with 5 buffs). This effect does not stack with similar effects."
 
