--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -58,6 +58,9 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8169104: ""
 
 # Giansar S3, S3+
+1124102: "[base skill] target enemy will have higher chance of being targeted when opponent is in auto action mode for 1 action(s)/100%<br>\
+[base skill] Incoming damage to target enemy increased by 1.3x for 1 next attack(s)/100%<br>\
+[base skill] (extra_cond: current action is not activated by another skill) Highest ATK ally (excluding self) uses skill 1 on random enemy/100%"
 1124103: "[base skill] Gain 2 combo(s) /100%<br>\
 [base skill] (extra_cond: Enemy count = 1) SPD Down by -30 to all enemies for 1 action(s) /100%<br>\
 [base skill] (extra_cond: Enemy count = 1) Incoming damage to all enemies increased by 1.8x for 2 next attack(s) /100%<br><br>\
@@ -68,6 +71,7 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 [base skill] (extra_cond: Enemy count = 1) Incoming damage to all enemies increased by 1.8x for 2 next attack(s) /100%<br><br>\
 [base skill] (extra_cond: Enemy count >= 2) SPD Down by -10 to all enemies for 1 action(s) /100%<br>\
 [base skill] (extra_cond: Enemy count >= 2) Incoming damage to all enemies increased by 1.5x for 1 next attack(s) /100%"
+8124103: ""
 
 # Goro variant passive
 8023201: "[When caster is alive], ATK of all allies increases for another 10% for each buff they possess (up to extra 50% ATK with 5 buffs). This effect does not stack with similar effects."
