--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -197,3 +197,6 @@
 184:
   name: "3rd Anniversary Ticket"
   description: "Ticket distributed for the 3rd anniversary, which can be used in a special exchange."
+184:
+  name: "3rd Anniversary Ticket"
+  description: "Ticket distributed for the 3rd anniversary, which can be used in a special exchange."
