--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -197,6 +197,6 @@
 184:
   name: "3rd Anniversary Ticket"
   description: "Ticket distributed for the 3rd anniversary, which can be used in a special exchange."
-184:
-  name: "3rd Anniversary Ticket"
-  description: "Ticket distributed for the 3rd anniversary, which can be used in a special exchange."
+186:
+  name: "Hero Festival Flag"
+  description: "Proof of victory at the Hero Festa. Can be exchanged for items at the exchange."
